examples/test/testpolicy19482.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19482
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key18: value46
      key40: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value6
          key22: value29
      podSelector:
        matchLabels:
          key9: value48
          key5: value46
          key41: value20
